started on photobox website

--- a/services.html
+++ b/services.html
@@ -26,17 +26,9 @@
         </nav>
 
         <section>
-            <div class="intro-container">
-                <img class="photobox-Branding" src="img/Photobox-Branding.jpg" alt="branding">
-                <div class="intro-heading">                
-                    <h2>
-                        Seattle Photo Booth Rentals
-                    </h2>
-                    <h3>
-                        The Photo Box <em>Experience</em>
-                    </h3>
-                </div>
-            </div>
+            <p>
+                SERVICES PAGE
+            </p>
         </section>
 
         <footer>
