--- a/contact.html
+++ b/contact.html
@@ -21,22 +21,13 @@
                     <li><a href="services.html">Services</a></li>
                     <li><a href="testimonial.html">Testimonials</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
-                </ul>
             </div>
         </nav>
 
         <section>
-            <div class="intro-container">
-                <img class="photobox-Branding" src="img/Photobox-Branding.jpg" alt="branding">
-                <div class="intro-heading">                
-                    <h2>
-                        Seattle Photo Booth Rentals
-                    </h2>
-                    <h3>
-                        The Photo Box <em>Experience</em>
-                    </h3>
-                </div>
-            </div>
+            <p>
+                CONTACT PAGE
+            </p>
         </section>
 
         <footer>
