--- a/index.html
+++ b/index.html
@@ -8,47 +8,51 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@600&display=swap" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <title>PhotoBox - Seattle Photobooth rental</title>
+        <title>JJ's Website</title>
     </head>
+
     <body>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-            <div class="logo-container">
-                <a href="index.html"><img src="img/photoboxLogo.png" alt="logo"></a>
-            </div>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <div class="location-desc">
+                    Home page
+                </div>
+                <button class="navbar-toggler ms-auto fixed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="about.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="services.html">Services</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="testimonial.html">Testimonial</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
-                    </li>
-              </div>
+
+                <div class="nav-bar collapse navbar-collapse" id="navbarSupportedContent" >
+                    <div class="nav-container ms-auto">
+                        <ul class="navbar-nav mb-2 mb-lg-0">
+                            <li class="nav-item ms-auto">
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                            </li>
+                            <li class="nav-item ms-auto">
+                            <a class="nav-link active" aria-current="page" href="about.html">About</a>
+                            </li>
+                            <li class="nav-item ms-auto">
+                            <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
+                            </li>
+                    </div>
+                </div>
+
             </div>
-          </nav>
+        </nav>
+
         <section>
             <div class="intro-container">
-                <img class="photobox-Branding" src="img/Photobox-Branding.jpg" alt="branding">
+
+                <img class="home-page-img" src="img/home-page-photo.JPG" alt="wallpaper">
+                
                 <div class="intro-heading">                
-                    <h2 style="text-align:center;">
-                        Seattle Photo Booth Rentals
-                    </h2> 
+                    <h2 style="text-align:center">
+                        Jiajing Cai
+                    </h2>
+
                     <h3>
-                        The Photo Box <em>Experience</em>
+                        Welcome to my website!
                     </h3>
                 </div>
             </div>
@@ -56,14 +60,19 @@
 
         <section class="description-section">
             <div class="description-container">
-                <p style="text-align:center; white-space: pre-wrap;"> Welcome to Photo Box! We combine remarkable customer service, high-quality images, and professional setups to elevate your events. With a modern twist on the classic photo booth, our team brings fresh designs and advanced equipment to create a truly immersive experience for the modern client. Get ready to capture moments that will leave a lasting impression!
+                <p class="brief-intro" style="text-align:center"> 
+                    Hey there! This website is going to be my work in progress of my portfolio
                 </p>
             </div>
 
         </section>
 
         <footer>
-
+            <div class="footer-container">
+                <p>
+                    Jiajing
+                </p>
+            </div>
         </footer>
     </body>
 </html>
