--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <title>JJ's Website</title>
     </head>
 
-    <body>
+    <body style="background-color: #f9eadc;">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
         <nav class="navbar navbar-expand-lg">
@@ -25,15 +25,15 @@
 
                 <div class="nav-bar collapse navbar-collapse" id="navbarSupportedContent" >
                     <div class="nav-container ms-auto">
-                        <ul class="navbar-nav mb-2 mb-lg-0">
+                        <ul class="navbar-nav" id="navbar-list">
                             <li class="nav-item ms-auto">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                             </li>
                             <li class="nav-item ms-auto">
-                            <a class="nav-link active" aria-current="page" href="about.html">About</a>
+                                <a class="nav-link active" aria-current="page" href="about.html">About</a>
                             </li>
                             <li class="nav-item ms-auto">
-                            <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
+                                <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
                             </li>
                     </div>
                 </div>
@@ -41,38 +41,40 @@
             </div>
         </nav>
 
-        <section>
-            <div class="intro-container">
+        <div class="container">
 
-                <img class="home-page-img" src="img/home-page-photo.JPG" alt="wallpaper">
-                
-                <div class="intro-heading">                
-                    <h2 style="text-align:center">
-                        Jiajing Cai
-                    </h2>
+            <div class="header">
+                <section>
+                    <div class="intro-container">
+                        <div class="intro-heading">                
+                            <h2 style="text-align:center">
+                                Jiajing Cai
+                            </h2>
 
-                    <h3>
-                        Welcome to my website!
-                    </h3>
+                            <h3>
+                                Welcome to my website!
+                            </h3>
+                        </div>
+                    </div>
+                </section>
+            </div>
+
+            <div id="body">
+                <section>
+                    <p class="brief-intro" style="text-align:center"> 
+                        Hey there! This website is going to be my work in progress of my portfolio
+                    </p>
+                </section>
+            </div>
+
+            <div id="footer">
+                <div class="footer-container">
+                    <p>
+                        Jiajing
+                    </p>
                 </div>
             </div>
-        </section>
 
-        <section class="description-section">
-            <div class="description-container">
-                <p class="brief-intro" style="text-align:center"> 
-                    Hey there! This website is going to be my work in progress of my portfolio
-                </p>
-            </div>
-
-        </section>
-
-        <footer>
-            <div class="footer-container">
-                <p>
-                    Jiajing
-                </p>
-            </div>
-        </footer>
+        </div>
     </body>
 </html>
