--- a/contact.html
+++ b/contact.html
@@ -10,38 +10,66 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <title>Contact me</title>
     </head>
-    <body>
+    <body style="background-color: #f9eadc;">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+
+        <nav class="navbar navbar-expand-lg" id="navbar_container">
             <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <div class="location-desc">
+                    <h2>Contact Info</h2>
+                </div>
+                <button class="navbar-toggler ms-auto fixed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
+
                 <div class="nav-bar collapse navbar-collapse" id="navbarSupportedContent" >
-                    <div class="nav-container d-flex justify-content-center">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    <div class="nav-container ms-auto">
+                        <ul class="navbar-nav" id="navbar-list">
+                            <li class="nav-item ms-auto">
+                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                             </li>
-                            <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="about.html">About</a>
+                            <li class="nav-item ms-auto">
+                                <a class="nav-link active" aria-current="page" href="about.html">About</a>
                             </li>
-                            <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
+                            <li class="nav-item ms-auto">
+                                <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
                             </li>
                     </div>
-              </div>
+                </div>
+
             </div>
-          </nav>
+        </nav>
 
-        <section>
-            <p>
-                CONTACT PAGE
-            </p>
-        </section>
+        <div class="container">
 
-        <footer>
+            <div class="header">
+                <section>
+                    <div class="intro-container">
+                        <div class="intro-heading">                
+                            <h2 style="text-align:center" id="name_header">
+                                Jiajing Cai
+                            </h2>
+                        </div>
+                    </div>
+                </section>
+            </div>
 
-        </footer>
+            <div id="body">
+                <section>
+                    <p class="brief-intro" style="text-align:center"> 
+                        Email: jayjcai001@gmail.com
+                    </p>
+                </section>
+            </div>
+
+            <div id="footer">
+                <div class="footer-container">
+                    <p>
+                        Jiajing 2024
+                    </p>
+                </div>
+            </div>
+        </div>
+
     </body>
 </html>
