--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <body style="background-color: #f9eadc;">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg" id="navbar_container">
             <div class="container-fluid">
                 <div class="location-desc">
-                    Home page
+                    <h2>Home Page</h2>
                 </div>
                 <button class="navbar-toggler ms-auto fixed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -47,7 +47,7 @@
                 <section>
                     <div class="intro-container">
                         <div class="intro-heading">                
-                            <h2 style="text-align:center">
+                            <h2 style="text-align:center" id="name_header">
                                 Jiajing Cai
                             </h2>
 
@@ -70,7 +70,7 @@
             <div id="footer">
                 <div class="footer-container">
                     <p>
-                        Jiajing
+                        Jiajing 2024
                     </p>
                 </div>
             </div>
