added my own data viz project

--- a/index.html
+++ b/index.html
@@ -62,10 +62,24 @@
             <div id="body">
                 <section>
                     <p class="brief-intro" style="text-align:center"> 
-                        Hey there! This website is going to be my work in progress of my portfolio
+                        Projects that I've done so far
                     </p>
                 </section>
+                <section class="projects-done">
+                    <div class="project-list-container">
+                        <a href="project.html">
+                            <button>
+                                Food preferences
+                            </button>
+                        </a>
+                        <p>
+                            A project that shows data visualization of people's perferred restaurants in India, I've gathered data from a restaurant aggregator: Zomato.
+                        </p>
+                    </div>
+                </section>
             </div>
+
+            
 
             <div id="footer">
                 <div class="footer-container">
